Closed Bug 18728 Opened 26 years ago Closed 25 years ago

Reframing causes form submission order problems

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: pollmann, Assigned: pollmann)

References

()

Details

(Whiteboard: fix in hand)

When a form element is reframed, it is added to the end of the form frame's mFormElements array, and thus it is submitted in the wrong order - after all of the other frames. The above test case should submit: foo=bar&sub=Searching Instead it submits: sub=Searching&foo=bar I don't know if ordering is guaranteed by the spec, but as both Nav and IE do it, we should too. Test case demonstrates the bug when hosted on blueviper, but probably not bugzilla as an attachment because the packet size has to be just right to split the select in the middle and cause a reframe.
Target Milestone: M14
QA Contact update.
Moving off to M16 - please speak up of you need this for M14, thanks!
Target Milestone: M14 → M16
*** Bug 26723 has been marked as a duplicate of this bug. ***
*** Bug 30953 has been marked as a duplicate of this bug. ***
*** Bug 31265 has been marked as a duplicate of this bug. ***
This bug prevents signing in to Ebay's site, bumping up priority.
Severity: minor → major
Status: NEW → ASSIGNED
Target Milestone: M16 → M15
Blocks: 33275
No longer blocks: 33275
Whiteboard: fix in hand
Fix checked in. You will still not be able to log into Ebay. This has been filed as bug 33275. To verify, use the test case for bug 30953. Thanks!
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Its fixed. Verifying.
Status: RESOLVED → VERIFIED
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.